--- a/_posts/2024-05-07-dpi-fsvi.md
+++ b/_posts/2024-05-07-dpi-fsvi.md
@@ -403,11 +403,11 @@ $$
 Using this factorization, we can express the mutual information terms:
 
 $$
-\begin{align}
+\begin{aligned}
 \MIof{X;Y} &= \Hof{X} - \Hof{X \given Y} \\
 &\ge \Hof{X} - \Hof{X \given Z} \\
 &= \MIof{X;Z}.
-\end{align}
+\end{aligned}
 $$
 
 This relies on $$\Hof{X \given Y} \le \Hof{X \given Z}$$. Why is this true?
@@ -1167,44 +1167,66 @@ For the equality cases, we observe that:
 1. we need a 1:1 mapping between parameters and equivalence classes for the first bound to be tight, and
 2. we need $$\Kale{\qof{[\W] \given \Y_n,\x_n,...,\Y_1,\x_1}}{\pof{[\W] \given \Y_n,\x_n,...,\Y_1,\x_1}} \to 0$$ for $$n \to \infty$$ for the second bound to be tight.
 
-For **2.**, we know from the chain rule that
+For **2.**: as we know from the chain rule that
 
 $$\Kale{\qof{\Y_n,...\Y_1\given\x_n,...,\x_1}}{\pof{\Y_n,...\Y_1\given\x_n,...,\x_1}}$$ 
 
-is monotonically increasing in $$n$$, and as it is bounded by $$\Kale{\qof{[\W]}}{\pof{[\W]}}$$ from above, it *must* converge. When does it close the gap?
+is monotonically increasing in $$n$$, and it is bounded by $$\Kale{\qof{[\W]}}{\pof{[\W]}}$$ from above, it *must* converge<d-footnote>It is a <i>bounded monotonically increasing sequence.</i></d-footnote>. So, when does it close the gap?
 
-To give intuition that it might, and without attempting to prove this formally, we can appeal to [*Bernstein von Mises* theorem](https://en.wikipedia.org/wiki/Bernstein%E2%80%93von_Mises_theorem), which states that the posterior distribution of the parameters converges to a Gaussian distribution with mean and variance given by the maximum likelihood estimate (MLE) as the number of samples goes to infinity *as long as the model parameters are identifiable, that is the true parameters we want to learn are unique*:
+To give intuition that it might do that, and without attempting to prove this formally, we can appeal to [*Bernstein von Mises* theorem](https://en.wikipedia.org/wiki/Bernstein%E2%80%93von_Mises_theorem), which states that the posterior distribution of the parameters converges to a Gaussian distribution with mean and variance given by the maximum likelihood estimate (MLE) as the number of data points tends to infinity *as long as the model parameters are identifiable, that is the true parameters we want to learn are unique, and that they have support*.
 
-In the space of equivalence classes given our definitions, the \[MLE\] will be unique by definition and thus the model identifiable, and as the MLE is prior-independent, both $$\opq$$ and $$\opp$$ will converge to the MLE. In other words, both $$\opq$$ and $$\opp$$ will converge to the same equivalence class, and $$\Kale{\qof{[\W]\given \Y..., \x...}}{\pof{[\W] \given \Y..., \x...}} \to 0$$ for $$n \to \infty$$.
-Thus, we have:
+For the evidence bound to be meaningful, we already know that we need support of the approximate distribution $$\opq$$ in the prior $$\opp$$---otherwise, the LHS is $$\infty$$. Moreover, realizing that we take an expectation over $$\qof{\Y_n ,..., \Y_1 \given \x_n ,..., \x_1}$$, we can decompose the KL term for the gap as:
 
 $$
-\begin{align}
-\Kale{\qof{[\W]}}{\pof{[\W]}} = \sup_{n\in \mathbb{N}} \Kale{\qof{\Y_n,...,\Y_1\given\x_n,...,\x_1}}{\pof{\Y_n,...,\Y_1\given\x_n,...,\x_1}}.
-\end{align}
+\begin{aligned}
+&\Kale{\qof{[\W] \given \Y_n,\x_n,...,\Y_1,\x_1}}{\pof{[\W] \given \Y_n,\x_n,...,\Y_1,\x_1}} \\
+&\quad = \E{\qof{\y_n,...,\y_1\given\x_n,...,\x_1}}{\Kale{\qof{[\W]\given \y_n, \x_n, ..., \y_1, \x_1}}{\pof{[\W]\given \y_n, \x_n, ..., \y_1, \x_1}}} \\
+&\quad = \simpleE{\qof{[\w']}}{\E{\qof{\y_n,..,.\y_1\given\x_n,...,\x_1, [\w']}}{\Kale{\qof{[\W]\given \y_n, \x_n, ..., \y_1, \x_1}}{\pof{[\W]\given \y_n, \x_n, ..., \y_1, \x_1}}}}.
+\end{aligned}
 $$
+
+That is, we sample a $$[\w'] \sim \qof{[\w']}$$ and then sample $$\y_n,...\y_1\given\x_n,...,\x_1$$ from the corresponding $$\qof{\y_n,...\y_1\given\x_n,...,\x_1, [\w']}$$ and marginalize over these. Crucially, $$[\w']$$ are the true parameters of the data-generating process for the inner KL divergence term. We thus take an expectation over KL terms fulfilling the conditions of the Bernstein von Mises theorem:
+
+$$
+\begin{aligned}
+\Kale{\qof{[\W] \given \y_n,\x_1...\y_1, \x_1}}{\pof{[\W] \given \y_n,\x_1...\y_1, \x_1}} \to 0.
+\end{aligned}
+$$
+
+In other words, for a given $$[w']$$, in the space of equivalence classes as defined previously, the equivalence class of all MLE solutions in the data limit, $$[MLE]$$, will be unique by definition---the model is identifiable---and match $$[\w']$$<d-footnote>This follows from the consistency of MLE estimators but also from Berstein von Mises with a flat/uninformative prior.</d-footnote>. As the MLE is prior-independent once there is support for it, both $$\opq$$ and $$\opp$$ will converge to the MLE $$[\w']$$ with sufficient data. Taking the expectation, this yields $$\Kale{\qof{[\W]\given \Y,..., \x...}}{\pof{[\W] \given \Y,..., \x...}} \to 0$$ for $$n \to \infty$$, and thus, we have:
+
+$$
+\begin{aligned}
+& \Kale{\qof{[\W]}}{\pof{[\W]}} = \\
+&\quad = \sup_{n\in \mathbb{N}} \Kale{\qof{\Y_n,...,\Y_1\given\x_n,...,\x_1}}{\pof{\Y_n,...,\Y_1\given\x_n,...,\x_1}}.
+\end{aligned}
+$$
+
+(Again, this is not a formal proof but an intuition for why the gap might close in the data limit.)
+
+In my opinion, this is a great result. We have shown both that the predictive prior term converges given our assumptions and that it converges to the symmetry-free parameter-based divergence in the data limit. This is a strong argument for the predictive prior term being meaningful and not just a technical trick.
+
+Let's appreciate one more thing: the predictive prior can consist of infinitely many data points and still converge to a finite value. 
 
 ## Parameter Priors vs. Predictive Priors
 
 What is the advantage of this all?
 
-In Bayesian deep learning, we often use parameter priors that are not meaningful in the sense that they do not take parameter symmetries into account. For example, a unit Gaussian prior over the parameters of a neural network does not induce different predictions for different parameters necessarily. While this prior can be sensible from a parameter compression perspective (e.g.\ see Hinton and van Camp (1993)<d-cite key="hinton1993keeping"></d-cite>), this does not have to be the only consideration.
+In Bayesian deep learning, we often use parameter priors that are not meaningful and which also do not take parameter symmetries into account. For example, a unit Gaussian prior over the parameters of a neural network does not induce different predictions for different parameters necessarily. While this prior can be sensible from a parameter compression perspective (e.g. see Hinton and van Camp (1993)<d-cite key="hinton1993keeping"></d-cite>), this does not have to be the only consideration guiding us.
 
-With function priors, that is predictive priors, we can induce more meaningful priors because we can focus on the predictions and ignore the parameters. This can connect Bayesian approaches to data augmentation and other regularization techniques.
+With function priors and predictive priors, we can specify more meaningful priors because we can focus on the predictions and ignore the parameters. More importantly, this connects Bayesian approaches to data augmentation and other regularization techniques as we will see next.
 
-Given that these priors are difficult to express explicitly though, using the DPI to obtain a functional ELBO can be an easier way to express and approximate them.
+Given that priors over equivalence classes are difficult to express explicitly though, using the DPI to obtain a functional ELBO can be an easier way to express and approximate them.
 
 ### Label Entropy Regularization
 
-Applied to the functional ELBO, we can gain a new perspective on label entropy regularization.
-
-The functional evidence bound can be lower-bounded using the chain rule by:
+All this also helps us gain a new perspective on label entropy regularization. The functional evidence bound can be lower-bounded using the chain rule by:
 
 $$
-\begin{align}
+\begin{aligned}
 \E{\qof{\w}}{-\log \pof{\Dany \given \w}} + \Kale{\qof{\Y... \given \x...}}{\pof{\Y... \given \x...}} \\
 \ge \E{\qof{\w}}{-\log \pof{\Dany \given \w}} + \E{\pdata{\x}}{\Kale{\qof{\Y \given \x}}{\pof{\Y \given \x}}},
-\end{align}
+\end{aligned}
 $$
 
 where we can expand the term under the second expectation to:
@@ -1227,23 +1249,15 @@ Thus, in the simplest approximation, the DPI and functional variational inferenc
 
 Obviously, assuming non-uniform prior predictions, $$\E{\pdata{\x}}{\Kale{\qof{\Y \given \x}}{\pof{\Y \given \x}}}$$ can be related to knowledge distillation in deep neural networks as introduced by Hinton et al. (2015)<d-cite key="hinton2015distilling"></d-cite>.
 
-The main difference is that knowledge distillation is using the reverse KL divergence instead of the forward KL divergence.
-
-Only that we are not distilling the knowledge from a teacher model but from the prior that we downweigh while also training our model on the data itself.
+The main technical difference is that knowledge distillation is using the reverse KL divergence instead of the forward KL divergence, while the conceptual difference is that we are not distilling the knowledge from a teacher model but from the prior that we downweigh while also training our model on the data itself. However, the connection between knowledge distillation and continual learning using informative priors is manifest.
 
 ## Conclusion
 
-In this blog post, we have explored the data processing inequality and its applications in information theory and Bayesian deep learning. We have looked at its meaning and intuitions for it in detail and have derived related versions.
+In this blog post, we took a deep dive into the data processing inequality (DPI) and its surprisingly far-reaching implications for modern Bayesian deep learning. By carefully examining the assumptions, equality conditions, and chain rule of the DPI, we arrived at an intuitive understanding of why function-space variational inference (FSVI) can be such a powerful tool. The DPI perspective illuminates how FSVI side-steps issues with high-dimensional parameter spaces by focusing on matching Bayesian predictive posteriors.
 
-In particular, we have seen that the data processing inequality provides an elegant perspective on why optimizing the variational posterior in function-space can be an effective inference strategy. 
-Thus, this basic tool from information theory has helped us with a very simple deduction of this modern Bayesian deep learning method. It is reassuring that fundamental principles prove their enduring ability to explain recent advances.
+Reasoning about parameter equivalence classes under the lens of the DPI, we saw how predictive KL divergences can capture meaningful differences between models while ignoring superficial discrepancies due to symmetries. This provides a fresh perspective on the advantages of predictive priors over standard parameter priors commonly used in Bayesian neural networks.
 
-While recovering the results in their full generality is beyond the scope of this post, we were able to derive several interesting results from the literature in simplified form (or at least provide strong intuitions and motivation for them). 
+While our treatment only scratched the surface of the full mathematical story, the intuitions we developed allowed us to re-derive key results from the literature and uncover deep connections between seemingly disparate methods like entropy regularization, continual learning, and knowledge distillation. The examples and proofs peppered throughout solidified the core concepts.
 
-Further, we gained intuition for the relationship between parameter and predictive priors and how they relate to the DPI. Predictive priors can be seen as more meaningful priors for Bayesian neural networks because of their ability to ignore parameter symmetries.
-
-Most importantly, we have looked at equivalence classes based on the predictions and pointed out how the *predictive* prior divergences approximate this functional 🥬 divergence between equivalence classes and not the usual parameter-based 🥬 divergences. 
-
-Lastly, we have seen that the DPI can be used to derive a new perspective on label entropy regularization, which is a commonly used regularization technique in deep learning, and point out how it differs from knowledge distillation.
-
+More than a bag of technical tricks, the DPI reveals itself to be a powerful conceptual tool for reasoning about models, objectives, and algorithms. I hope this post inspires the reader to seek the fundamental principles underpinning machine learning innovations and to use those principles as a guide for future research. With a solid grasp of foundational tools like the DPI, we can all contribute to demystifying and unifying the rapidly evolving field of Bayesian deep learning.
 
