--- a/assets/bibliography/2024-05-07-dpi-fsvi.bib
+++ b/assets/bibliography/2024-05-07-dpi-fsvi.bib
@@ -133,3 +133,12 @@
   journal = "arXiv preprint arXiv:2205.08766",
   year    = "2022"
 }
+
+@misc{fort2020deep,
+      title={Deep Ensembles: A Loss Landscape Perspective}, 
+      author={Stanislav Fort and Huiyi Hu and Balaji Lakshminarayanan},
+      year={2020},
+      eprint={1912.02757},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML}
+}
