--- a/assets/bibliography/2024-05-07-what-exactly-has-tabpfn-learned-to-do.bib
+++ b/assets/bibliography/2024-05-07-what-exactly-has-tabpfn-learned-to-do.bib
@@ -34,13 +34,6 @@ url={https://openreview.net/forum?id=KSugKcbNf9}
   year={2016}
 }
 
-@article{mccarter2022backwardscompatible,
-      title={Towards Backwards-Compatible Data with Confounded Domain Adaptation}, 
-      author={Calvin McCarter},
-      year={2022},
-      journal={arXiv preprint arXiv:2203.12720},
-}
-
 @article{pedregosa2011scikit,
   title={Scikit-learn: Machine learning in Python},
   author={Pedregosa, Fabian and Varoquaux, Ga{\"e}l and Gramfort, Alexandre and Michel, Vincent and Thirion, Bertrand and Grisel, Olivier and Blondel, Mathieu and Prettenhofer, Peter and Weiss, Ron and Dubourg, Vincent and others},
@@ -55,14 +48,16 @@ url={https://openreview.net/forum?id=KSugKcbNf9}
   title={When Do Neural Nets Outperform Boosted Trees on Tabular Data?},
   author={McElfresh, Duncan and Khandagale, Sujay and Valverde, Jonathan and Ramakrishnan, Ganesh and Goldblum, Micah and White, Colin and others},
   journal={arXiv preprint arXiv:2305.02997},
-  year={2023}
+  year={2023},
+  url={https://openreview.net/pdf?id=CjVdXey4zT}
 }
 
 @article{nagler2023statistical,
   title={Statistical Foundations of Prior-Data Fitted Networks},
   author={Nagler, Thomas},
   journal={arXiv preprint arXiv:2305.11097},
-  year={2023}
+  year={2023},
+  url={https://proceedings.mlr.press/v202/nagler23a}
 }
 
 @article{vaswani2017attention,
